@@ -5,6 +5,7 @@ class Entry < ActiveRecord::Base
   belongs_to :user
   belongs_to :charge_type
   
+  scope :current, :conditions => { :deleted => false }
   scope :search, lambda { |*args| {:conditions => [ 'LOWER(name) LIKE ?', '%' + args.first.downcase.split(' ').join('%') + '%' ] } }
   scope :with_charged, lambda { |*args| { :conditions => ["entries.charged = ? or 1 = ?", args.first, args.first]} }
   scope :with_date_for_calendar, lambda { |*args| { :conditions => ["DATE(entries.billing_date) >= ? and DATE(entries.billing_date) <= ?", args.first, args[1]]}}
