@@ -1,11 +1,13 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/Fixtures.html
 
 one:
+  id: 1
   user_id: 1
   name: My Bank
   deleted: false
     
-two: 
+two:
+  id: 2
   user_id: 1
   name: Money Under My Sofa
   deleted: false
